🏀😀 Checkpoint ./index.html:19034959/238 ./style.css:19034959/14

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ li.nav a:hover {
   align-items: center; /* Align the flex items to the center */
 
   /* Design properties */
-  background-color: #0D38D3;
+  background-color: #ffffffba;
   padding: 5px;
 
   /* Positioning properties */
