--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
   font-family: "Roboto", sans-serif; /* Change the font */
   line-height: 1.5em; /* Change the line height size*/
   margin: 0em;
-  color: white; /* Change the font color*/
+  color: #cc0000ff; /* Change the font color*/
   background-color: #fff; /* Change the background color */
   box-sizing: border-box;
 }
@@ -64,7 +64,7 @@ ul.nav-bar {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #cc0000;
+  background-color: #cc0000ff;
   border-style: solid;
   border-color: #001e96;
 }
@@ -94,8 +94,8 @@ li.nav a {
 
 li.nav a:hover {
   /* Styling for the <a> elements when the mouse is hovering in <li class="nav"> */
-  background-color: #cc0000ff;
-  color: #43d6b9ff;
+  background-color: #fff;
+  color: #cc0000ff;
 }
 
 /************************************************/
@@ -161,7 +161,7 @@ li.nav a:hover {
 /* TODO (optional): Change the background color and/or text alignment */
 
 .text-section {
-  background-color: #fff;
+  background-color: #ffffffdc;
   padding: 20px 45px;
   margin: 35px;
   text-align: center;
@@ -213,6 +213,17 @@ li.nav a:hover {
 /******************************************************/
 
 /* TODO: Add a breakpoint if the screen is 700px or less */
+@media screen and (max-width: 700px) {
+  .flex-container {
+    flex-wrap: wrap;
+    top: 20%;
+  }
+  
+  .heading-home {
+    font-size: 35px;
+  }
+  
+}
 
 
 /* TODO: Add additional breakpoints based on your website's design
