--- a/take-action.css
+++ b/take-action.css
@@ -1,6 +1,4 @@
-/******************************************************/
 /************** CSS FOR TAKE-ACTION.HTML **************/
-/******************************************************/
 
 .page-header-action {
   width: 100%;
@@ -14,12 +12,9 @@
   color: #fff;
 }
 
-
-/******************************************************/
 /***************** ACTION ITEM LIST *******************/
-/******************************************************/
 
-/* Flexbox container that holds all flex items */
+/* flexbox container */
 .flex-container-action {
   display: flex;
 
