🚿👮 Checkpoint ./index.html:19034959/703 ./style.css:19034959/85

--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ li.nav a:hover {
   margin: 10px;
   text-align: left;
   letter-spacing: 1px;
+  text-indent: 50px;
 }
 
 /*---------images and parallax---------*/
