🐿🚿 Checkpoint ./take-action.html:19034959/1291 ./take-action.css:19034959/96

--- a/take-action.css
+++ b/take-action.css
@@ -12,6 +12,10 @@
   color: #fff;
 }
 
+p a {
+  color: #fff;
+}
+
 /***************** ACTION ITEM LIST *******************/
 
 /* flexbox container */
