📼⛹ Checkpoint ./take-action.html:19034959/867 ./style.css:19034959/97 ./take-action.css:19034959/57

--- a/take-action.css
+++ b/take-action.css
@@ -139,13 +139,13 @@ like a checkmark
 
 /* change background color on hover */
 #my-list li:hover {
-  background: #f3f3f3;
-  color: #0D38D3;
+  background: #a;
+  color: #001e96;
 }
 
 /* change check square color on hover */
 #my-list li:hover::before {
-  border-color: #0D38D3;
+  border-color: #001e96;
   border-style: solid;
 }
 
