--- a/style.css
+++ b/style.css
@@ -182,6 +182,20 @@ li.nav a:hover {
   margin-right: 10px;
 }
 
+/* styling for resources page */
+.container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  position: absolute;
+  margin-top: 150px;
+  padding: 20px;
+}
+
+#header-resources {
+  color: #fff;
+}
+
 /***** CHANGE INDEX.HTML CSS BASED ON SCREEN SIZE *****/
 @media screen and (max-width: 700px) {
   .flex-container {
