--- a/style.css
+++ b/style.css
@@ -206,6 +206,10 @@ li.nav a:hover {
   box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.2), 6px 6px 10px 0px rgba(0, 0, 0, 0.15);
 }
 
+.video {
+  padding: 10px;
+}
+
 /***** CHANGE INDEX.HTML CSS BASED ON SCREEN SIZE *****/
 @media screen and (max-width: 700px) {
   .flex-container {
