--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body,
 html {
   height: 100%;
   font-size: 20px; 
-  font-family: "Roboto", sans-serif; /* Change the font */
+  font-family: 'Open Sans', sans-serif;; /* Change the font */
   line-height: 1.5em; 
   margin: 0em;
   color: #cc0000ff; 
@@ -99,7 +99,7 @@ li.nav a:hover {
   position: absolute;
   left: 20%;
   right: 20%;
-  top: 30%; /* Change this value to move the box up or down */
+  top: 35%; /* Change this value to move the box up or down */
   
   /*border-style: dotted;*/
 }
@@ -112,6 +112,7 @@ li.nav a:hover {
   letter-spacing: 10px;
   line-height: 60px;
   text-align: center;
+  font-weight: bold;
 
   /*border-style: dotted;*/
 }
@@ -204,6 +205,7 @@ li.nav a:hover {
   padding: 10px;
   background-color: #cc000011;
   box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.2), 6px 6px 10px 0px rgba(0, 0, 0, 0.15);
+  font-size: 16px;
 }
 
 .video {
